--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "<0.20.0",
-    "pg": "^8.7.1",
-    "pg-connection-string": "^2.5.0",
-    "sqlite3": "5.0.0",
-    "strapi": "3.6.6",
-    "strapi-admin": "3.6.6",
-    "strapi-connector-bookshelf": "3.6.6",
-    "strapi-plugin-content-manager": "3.6.6",
-    "strapi-plugin-content-type-builder": "3.6.6",
-    "strapi-plugin-email": "3.6.6",
-    "strapi-plugin-i18n": "3.6.6",
-    "strapi-plugin-upload": "3.6.6",
-    "strapi-plugin-users-permissions": "3.6.6",
-    "strapi-provider-upload-aws-s3": "^3.6.6",
-    "strapi-utils": "3.6.6"
+    "pg": "^8.5.1",
+    "pg-connection-string": "^2.4.0",
+    "strapi": "3.4.4",
+    "strapi-admin": "3.4.4",
+    "strapi-connector-bookshelf": "3.4.4",
+    "strapi-plugin-content-manager": "3.4.4",
+    "strapi-plugin-content-type-builder": "3.4.4",
+    "strapi-plugin-email": "3.4.4",
+    "strapi-plugin-magic": "^0.9.0",
+    "strapi-plugin-membership-light": "^1.1.0",
+    "strapi-plugin-upload": "3.4.4",
+    "strapi-plugin-users-permissions": "3.4.4",
+    "strapi-provider-upload-aws-s3": "^3.3.3",
+    "strapi-utils": "3.4.4",
+    "stripe": "^8.121.0"
   },
   "author": {
     "name": "A Strapi developer"
